@@ -27,10 +27,12 @@ options(keep.source = interactive())
 options(warn = 0)
 options(help.try.all.packages = FALSE)
 options(CRAN = "http://cran.r-project.org")
-options(BIOC= "http://www.bioconductor.org")
+options(BIOC = "http://www.bioconductor.org")
+## for use by packageStatus() only.
 options(repositories=function() {
-                           c(CRAN=contrib.url(getOption("CRAN")),
-                                BIOC=contrib.url(getOption("BIOC")))})
+    c(CRAN=contrib.url(getOption("CRAN")),
+      BIOC=contrib.url(getOption("BIOC")))
+})
 
 options(timeout = 60)
 options(internet.info = 2)
