@@ -38,6 +38,6 @@ getWindowsHandle <- function(which = "Console") {
 menuShowCRAN <- function()
 {
     CRAN <- getOption("CRAN")
-    if(!nchar(CRAN)) CRAN <- "http://cran.r-project.org"
+    if(identical(CRAN, "@CRAN@")) CRAN <- "http://cran.r-project.org"
     shell.exec(CRAN)
 }
